# DRL-TERM_PROJECT

./: Instruction.md  README.md  config.py  evaluate.py  main.py  model.py  plot_aime_comparison.py  plot_results.py  requirements.txt  requirements_olympiad.txt  run_aime_bench.sh
DRL_term_project_bench/: .gitignore  README.md  run_aime_rerun.sh
DRL_term_project_bench/bench_passatk/: README.md  README_KO.md  __init__.py  __main__.py  analyze_distribution.py  analyze_rerun.py  combine_aime.py  compare.py  extract_solutions.py  paired_compare.py  plot_3model.py  plot_passk.py  requirements.txt  resample_pass1.py  run_comparison.sh
DRL_term_project_bench/bench_passatk/datasets/: __init__.py  aime.py  math.py  olympiad.py  test.py
DRL_term_project_bench/bench_passatk/eval/: __init__.py  grader.py  metrics.py
DRL_term_project_bench/bench_passatk/samplers/: __init__.py  hf_sampler.py  vllm_sampler.py
DRL_term_project_bench/bench_passatk/tests/: __init__.py  test_metrics.py
DRL_term_project_bench/bench_passatk/utils/: __init__.py  io.py  seeding.py
FRP/: README.md  docker-compose.yml  frps.toml
Inference_Basemodel/: README.md  config.py  dataset.py  evaluate.py  main.py  model.py
PAV/: .dockerignore  .env.example  .env.inference.example  .gitignore  Dockerfile  Dockerfile.blackwell  Dockerfile.dashboard  IMPLEMENTATION_REPORT.md  README.md  TRAINING_FLOW.md  docker-compose.inference-blackwell.yml  docker-compose.inference.yml  docker-compose.prm-only.yml  docker-compose.single.yml  docker-compose.yml  pyproject.toml  requirements.txt  run_train.sh
PAV/configs/: policy.yaml  prm.yaml  prm_blackwell.yaml  rl_c2_scalar.yaml  rl_phase1_run.yaml  rl_q3.yaml  rl_q3_swap.yaml
PAV/data/: sanity_items.jsonl
PAV/docs/: DOCKER_STAGE_TESTS.md  IMPLEMENTATION_REPORT.md  QUICKSTART.md  RAY_MIGRATION.md  STAGE_R_REPORT.md  STAGE_TEST_REPORT.md  TRAINING_CONFIG.md  TRAINING_FLOW.md  구현 계획 — 차분 PAV + 분포형 보상 (Phase 0) 4dc18b40f5ed47259166ff0f0c0f8086.md
PAV/frp/: README.md  frpc.toml
PAV/scripts/: 00_smoke_prm.py  01_phase0_diff.py  02_phase1_mc.py  03_grpo_train.py  03_grpo_train_swap.py  10_label_steps.py  20_eval_mathnet.py  _smoke_remote_prm.py  cluster_discovery.py  dashboard.py  download_models.py  plot_compare3.py  plot_metrics.py  run-discovery.sh  run_c2_scalar.sh  serve_mu.py  serve_mu_ray.py  serve_prm.py  serve_prm_http.py  serve_prm_ray.py  setup-moon.sh  smoke_inference.sh  zt-entrypoint.sh
PAV/src/: __init__.py
PAV/src/eval/: __init__.py  bon_pav.py  sanity.py
PAV/src/pav/: __init__.py  base.py  differential.py  mc_rollout.py  reduce.py
PAV/src/prm/: __init__.py  handlers.py  loader.py  ray_actor.py  ray_client.py  remote_client.py  remote_worker.py  score.py  skywork_rm.py
PAV/src/prm/skywork/: __init__.py  io_utils.py  modeling_base.py  prm_model.py
PAV/src/rollout/: __init__.py  mu_handlers.py  mu_sampler.py  mu_worker.py  parser.py  ray_actor.py  ray_client.py  remote_mu.py  vllm_rollout.py
PAV/src/swap/: orchestrator.py  reward_fn.py  swap_mu.py  swap_prm.py  trainer.py
PAV/src/train/: __init__.py  callbacks.py  grpo_trainer.py  policy_data.py  ray_train.py  reward_fn.py
PAV/tests/: test_imports.py  test_parser.py  test_pav_swap.py  test_ray.py  test_remote.py
PAV/tests/integration/: test_real_amqp.py
bench_passatk/: four_model_report.py  run_bench.py
bench_passatk/examples/: smoke_test.sh
config/: base_config.yaml  config.yaml  olympiad_config.yaml
dashboard/: index.html
dashboard/data/: results.json
data/: dataset.py  gsm8k.py  olympiad_dataset.py
docs/: FRP_INTEGRATION.md
eval/: __init__.py  base.py  evaluator.py  math_eval.py  olympiad_eval.py
models/: __init__.py  base.py  policy.py  reward_model.py
reward/: __init__.py  base.py  llm_judge.py  math_reward.py
scripts/: evaluate.py  run_olympiad_eval.py  train.py
trainer/: __init__.py  base.py  grpo_trainer.py  ppo_trainer.py
utils/: logging.py
