[project]
name = "pav-rl"
version = "0.1.0"
description = "차분 PAV (Phase 0) + 분포형 MC-rollout PAV (Phase 1) — 천공 PRM + GRPO+LoRA"
requires-python = ">=3.10,<3.13"
readme = "README.md"

# 베이스 deps — swap test / sanity / PRM scoring 코드 동작 최소셋
# (vLLM colocate / GRPO 학습은 [project.optional-dependencies].gpu)
dependencies = [
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
    "transformers>=4.45,<4.50",      # Skywork PRM_MODEL이 4.5x major rewrite와 충돌
    "pyyaml>=6.0",
    "datasets>=2.20",
    "numpy>=1.26",
    "accelerate>=1.0",                # PRM_MODEL의 PartialState 의존
    "huggingface-hub>=0.24",          # PRM_MODEL의 hf_hub_download 의존
    "safetensors>=0.4",
    "httpx>=0.27",                    # RemotePRM / RemoteMuSampler HTTP 클라이언트
]

[project.optional-dependencies]
# 실제 GPU 학습 — torch 2.5.1 / cu126과 호환되는 버전 핀
gpu = [
    "vllm>=0.7.0,<0.8",
    "trl>=0.13,<0.16",                # GRPOConfig + vllm_mode='colocate' + peft_config 지원
    "peft>=0.14",
    "bitsandbytes>=0.43",             # LLM.int8 (PRM/policy 8bit 양자화)
    "wandb>=0.18",
    "math-verify>=0.5",
    "hydra-core>=1.3",
    "came-pytorch>=0.0.7",            # CAME optimizer (factored variance + confidence guidance)
    "galore-torch>=1.0",              # GaLore optimizer (low-rank gradient projection, 1.5B Full FT 24GB)
]
# autoawq는 별도 설치 — torch 2.5 호환은 0.2.7+ (GPU만 의미)
awq = ["autoawq>=0.2.7"]
# 추론 PC의 PRM HTTP 서버 (scripts/serve_prm_http.py) — vLLM은 OpenAI API 내장
serve = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ---- uv: torch wheel을 PyTorch index에서 직접 받음
# cu126 드라이버 + cu124 wheel 조합 (cu126 wheel은 torch 2.5.x 빌드가 없음 → forward-compat 사용)
[tool.uv]
package = false

[tool.uv.sources]
torch       = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio  = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py311"
