[project]
name = "pav-rl"
version = "0.1.0"
description = "м°Ёл¶„ PAV (Phase 0) + л¶„нҸ¬нҳ• MC-rollout PAV (Phase 1) вҖ” мІңкіө PRM + GRPO+LoRA"
requires-python = ">=3.10,<3.13"
readme = "README.md"

# лІ мқҙмҠӨ deps вҖ” swap test / sanity / PRM scoring мҪ”л“ң лҸҷмһ‘ мөңмҶҢм…Ӣ
# (vLLM colocate / GRPO н•ҷмҠөмқҖ [project.optional-dependencies].gpu)
dependencies = [
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
    "transformers>=4.45,<4.50",      # Skywork PRM_MODELмқҙ 4.5x major rewriteмҷҖ м¶©лҸҢ
    "pyyaml>=6.0",
    "datasets>=2.20",
    "numpy>=1.26",
    "accelerate>=1.0",                # PRM_MODELмқҳ PartialState мқҳмЎҙ
    "huggingface-hub>=0.24",          # PRM_MODELмқҳ hf_hub_download мқҳмЎҙ
    "safetensors>=0.4",
    "httpx>=0.27",                    # RemotePRM / RemoteMuSampler HTTP нҒҙлқјмқҙм–ёнҠё
]

[project.optional-dependencies]
# мӢӨм ң GPU н•ҷмҠө вҖ” torch 2.5.1 / cu126кіј нҳёнҷҳлҗҳлҠ” лІ„м „ н•Җ
gpu = [
    "vllm>=0.7.0,<0.8",
    "trl>=0.13,<0.16",                # GRPOConfig + vllm_mode='colocate' + peft_config м§Җмӣҗ
    "peft>=0.14",
    "bitsandbytes>=0.43",             # LLM.int8 (PRM/policy 8bit м–‘мһҗнҷ”)
    "wandb>=0.18",
    "math-verify>=0.5",
    "hydra-core>=1.3",
    "came-pytorch>=0.0.7",            # CAME optimizer (factored variance + confidence guidance)
    "galore-torch>=1.0",              # GaLore optimizer (low-rank gradient projection, 1.5B Full FT 24GB)
    "tensorboard>=2.15",              # н•ҷмҠө metrics мӢңк°Ғнҷ” (HF Trainer мһҗлҸҷ logging)
]
# autoawqлҠ” лі„лҸ„ м„Өм№ҳ вҖ” torch 2.5 нҳёнҷҳмқҖ 0.2.7+ (GPUл§Ң мқҳлҜё)
awq = ["autoawq>=0.2.7"]
# м¶”лЎ  PCмқҳ PRM HTTP м„ңлІ„ (scripts/serve_prm_http.py) вҖ” vLLMмқҖ OpenAI API лӮҙмһҘ
serve = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]
# н•ҷмҠө metrics лҢҖмӢңліҙл“ң (scripts/dashboard.py)
dashboard = [
    "streamlit>=1.30",
    "matplotlib>=3.8",
    "pandas>=2.0",
    "plotly>=5.18",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ---- uv: torch wheelмқ„ PyTorch indexм—җм„ң м§Ғм ‘ л°ӣмқҢ
# cu126 л“ңлқјмқҙлІ„ + cu124 wheel мЎ°н•© (cu126 wheelмқҖ torch 2.5.x л№Ңл“ңк°Җ м—ҶмқҢ вҶ’ forward-compat мӮ¬мҡ©)
[tool.uv]
package = false

[tool.uv.sources]
torch       = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio  = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py311"
